# AnanthamVoxelEngine

./: .gitignore  .repomix.xml  Cargo.toml  README.md
crates/anantham_core/: Cargo.toml
crates/anantham_core/src/: lib.rs  plugin.rs  state.rs
crates/anantham_core/src/input/: actions.rs  mod.rs
crates/anantham_core/src/render_bridge/: extraction.rs  gpu_types.rs  mod.rs
crates/anantham_core/src/spatial/: camera.rs  mod.rs
crates/anantham_core/src/voxel/: gc.rs  mod.rs
crates/anantham_core/src/voxel/block/: data.rs  mod.rs  pipeline.rs  registry.rs  shape.rs
crates/anantham_core/src/voxel/block/property/: loader.rs  mod.rs  registry.rs  systems.rs
crates/anantham_core/src/voxel/block/vfs/: mod.rs  paths.rs
crates/anantham_core/src/voxel/chunk/: compression.rs  data.rs  gc.rs  local.rs  mod.rs
crates/anantham_core/src/voxel/meshing/: context.rs  greedy.rs  meshlet.rs  mod.rs  quad.rs  registry.rs  system.rs
crates/anantham_core/src/voxel/world/: access.rs  generation.rs  math.rs  mod.rs
crates/anantham_core/src/window/: controls.rs  mod.rs
crates/anantham_render/: Cargo.toml  build.rs
crates/anantham_render/shaders/: voxel.frag  voxel.mesh
crates/anantham_render/src/: context.rs  lib.rs  plugin.rs
crates/anantham_render/src/core/: device.rs  mod.rs  pipeline.rs  swapchain.rs  sync.rs
crates/anantham_render/src/resource/: allocator.rs  buffer.rs  image.rs  mod.rs  scene.rs  shader.rs
crates/anantham_sandbox/: Cargo.toml
crates/anantham_sandbox/src/: main.rs
data/anantham/blocks/dirt/: mesh.ron  meta.ron
data/anantham/blocks/stone/: meta.ron
