[package]
name = "anantham_render"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }
raw-window-handle = { workspace = true }
gpu-allocator = { workspace = true }
anantham_core = { workspace = true }
bevy = { workspace = true }
bytemuck = { workspace = true }
